force-app/main/default/objects/Course__c/fields/Course_Duration__c.field-meta.xml
<CustomField>
    <fullName>Course_Duration__c</fullName>
    <label>Course Duration (Days)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>