force-app/main/default/objects/Course__c/fields/Number_of_trainings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_trainings__c</fullName>
    <label>Number of trainings</label>
    <summaryForeignKey>Training__c.Course_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>