force-app/main/default/objects/Course__c/fields/Total_cost_of_all_trainings__c.field-meta.xml
<CustomField>
    <fullName>Total_cost_of_all_trainings__c</fullName>
    <label>Total cost of all trainings</label>
    <summarizedField>Training__c.Cost__c</summarizedField>
    <summaryForeignKey>Training__c.Course_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>